add docker functionality

--- a/docker.ini
+++ b/docker.ini
@@ -6,23 +6,17 @@
 [app:main]
 use = egg:gitlab-webhook-runner
 
-pyramid.reload_templates = true
+pyramid.reload_templates = false
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
-pyramid.includes =
-    pyramid_debugtoolbar
 
 gitlab_token=PUT_TOKEN_HERE
-path_to_script=./example_script.sh
+path_to_script=./docker_script.sh
 runner_logger=runner
-run_timeout_seconds=10
+run_timeout_seconds=900
 docker=true
-
-# By default, the toolbar only appears for clients from IP addresses
-# '127.0.0.1' and '::1'.
-# debugtoolbar.hosts = 127.0.0.1 ::1
 
 ###
 # wsgi server configuration
@@ -30,7 +24,7 @@ docker=true
 
 [server:main]
 use = egg:waitress#main
-listen = localhost:6543
+listen = *:6543
 
 ###
 # logging configuration
@@ -38,7 +32,7 @@ listen = localhost:6543
 ###
 
 [loggers]
-keys = root, gitlab_webhook_runner
+keys = root, gitlab_webhook_runner, runner, config
 
 [handlers]
 keys = console
@@ -47,11 +41,23 @@ keys = console
 keys = generic
 
 [logger_root]
-level = INFO
+level = WARN
 handlers = console
 
+[logger_runner]
+level = INFO
+handlers = console
+qualname = runner
+propagate=0
+
+[logger_config]
+level = INFO
+handlers = console
+qualname = config
+propagate=0
+
 [logger_gitlab_webhook_runner]
-level = DEBUG
+level = WARN
 handlers =
 qualname = gitlab_webhook_runner
 
