--- a/production.ini
+++ b/production.ini
@@ -13,8 +13,8 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
 gitlab_token=PUT_TOKEN_HERE
-path_to_script=./test_script.sh
-log_filename=gitlab_webhook.log
+path_to_script=./example_script.sh
+runner_logger=runner
 run_timeout_seconds=900
 
 ###
@@ -31,7 +31,7 @@ listen = *:6543
 ###
 
 [loggers]
-keys = root, gitlab_webhook_runner
+keys = root, gitlab_webhook_runner, runner
 
 [handlers]
 keys = console
@@ -42,6 +42,12 @@ keys = generic
 [logger_root]
 level = WARN
 handlers = console
+
+[logger_runner]
+level = INFO
+handlers = console
+qualname = runner
+propagate=0
 
 [logger_gitlab_webhook_runner]
 level = WARN
