--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
-pyramid==1.10
-pyramid-debugtoolbar==4.5
-pyramid-mako==1.0.2
+asn1crypto==0.24.0
+bcrypt==3.1.4
 beautifulsoup4==4.6.3
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+cryptography==2.3.1
 hupper==1.4
+idna==2.7
 Mako==1.0.7
 MarkupSafe==1.0
+paramiko==2.4.2
 PasteDeploy==1.5.2
 plaster==1.0
 plaster-pastedeploy==0.6
+pyasn1==0.4.4
+pycparser==2.19
 Pygments==2.2.0
+PyNaCl==1.3.0
+pyramid==1.10
+pyramid-debugtoolbar==4.5
+pyramid-mako==1.0.2
 repoze.lru==0.7
+requests==2.20.0
 six==1.11.0
 translationstring==1.3
+urllib3==1.24.1
 venusian==1.1.0
 waitress==1.1.0
 WebOb==1.8.3
